banner para la version mobile terminada

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
         <a href="" class="boton__login">Login</a>
         <img src="./logos/icono-buscador.svg" alt="Buscador">
     </header>
+
+    <section class="banner">
+        <div class="banner__container-div">
+            <h1>Febrero promocional</h1>
+            <p>Productos seleccionados con 33% de descuento</p>
+            <a href="" class="boton__baner">Ver consolas</a>
+        </div>
+    </section>
 </body>
 </html>
