seccion de star wars version mobile lista

--- a/index.html
+++ b/index.html
@@ -21,5 +21,43 @@
             <a href="" class="boton__baner">Ver consolas</a>
         </div>
     </section>
+
+    <main>
+        <section class="seccion__starWars">
+            <div class="title__starWars">
+                <h1>Star Wars</h1>
+                <div>
+                    <p>Ver todo</p>
+                    <img src="./logos/arrow_back.svg" alt="arrow">
+                </div>
+            </div>
+            <section class="container__productos-starWars">
+                <article class="container__producto">
+                    <img src="./productosImg/starWars1.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">Ver producto</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars2.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">Ver producto</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars3.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">Ver producto</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars4.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">Ver producto</a>
+                </article>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
