--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </section>
 
     <main>
-        <section class="seccion__starWars">
-            <div class="title__starWars">
+        <section class="seccion__products">
+            <div class="title__products">
                 <h1>Star Wars</h1>
                 <div>
                     <p>Ver todo</p>
@@ -57,7 +57,79 @@
                     <a href="">Ver producto</a>
                 </article>
             </section>
+
+            <section class="seccion__products">
+                <div class="title__products">
+                    <h1>Consolas</h1>
+                    <div>
+                        <p>Ver todo</p>
+                        <img src="./logos/arrow_back.svg" alt="arrow">
+                    </div>
+                </div>
+                <section class="container__productos-consolas">
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas1.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas2.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas3.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas4.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+            </section>
+
+            <section class="seccion__products">
+                <div class="title__products">
+                    <h1>Diversos</h1>
+                    <div>
+                        <p>Ver todo</p>
+                        <img src="./logos/arrow_back.svg" alt="arrow">
+                    </div>
+                </div>
+                <section class="container__productos-diversos">
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos1.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos2.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos3.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos4.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">Ver producto</a>
+                    </article>
+            </section>
         </section>
     </main>
+
+    
 </body>
 </html>
