footer version mobile terminado

--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
         </section>
     </main>
 
-    
+    <footer>
+        <div class="quienesSomos">
+            <img src="./logos/logo-footer.svg" alt="">
+            <a href="">Quienes somos</a>
+            <a href="">Politica de privacidad</a>
+            <a href="">Programa de fidelidad</a>
+            <a href="">Nuestras tiendas</a>
+            <a href="">Quiero ser franquisiado</a>
+            <a href="">Anuncie aqui</a>
+        </div>
+        <form action="" class="formulario">
+            <h1>Hable con nosotros</h1>
+            <input type="text" placeholder="nombre">
+            <textarea name="" id="" cols="30" rows="10">Escribe tu mensaje</textarea>
+            <button type="submit">Enviar mensaje</button>
+        </form>
+    </footer>
 </body>
 </html>
