--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/mobile.css">
     <link rel="stylesheet" href="./styles/tablet.css" media="(min-width:768px)">
+    <link rel="stylesheet" href="./styles/desktop.css" media="(min-width:1024px)">
     <title>Alura Geek</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <a href="" class="boton__login">Login</a>
             <img src="./logos/icono-buscador.svg" alt="Buscador">
         </div>
-        <div class="container__login-tablet">
+        <div class="container__login-tablet container__login-desktop">
             <img src="./logos/logoAluraGeek.svg" alt="">
             <div class="container__buscador">
                 <input type="text" placeholder="¿Que deseas buscar?">
