pagina principal para la version desktop lista

--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@
     <footer>
         <div class="quienesSomos">
             <img src="./logos/logo-footer.svg" alt="">
-            <a href="">Quienes somos</a>
-            <a href="">Politica de privacidad</a>
-            <a href="">Programa de fidelidad</a>
-            <a href="">Nuestras tiendas</a>
-            <a href="">Quiero ser franquisiado</a>
-            <a href="">Anuncie aqui</a>
+            <div>
+                <a href="">Quienes somos</a>
+                <a href="">Politica de privacidad</a>
+                <a href="">Programa de fidelidad</a>
+                <a href="">Nuestras tiendas</a>
+                <a href="">Quiero ser franquisiado</a>
+                <a href="">Anuncie aqui</a>
+            </div>
         </div>
         <form action="" class="formulario">
             <h1>Hable con nosotros</h1>
