log in terminado en la version mobile

--- a/logIn.html
+++ b/logIn.html
@@ -16,10 +16,30 @@
     <main>
         <h1>Iniciar sesion</h1>
         <form action="">
-            <input type="email" name="" id="">
-            <input type="password" name="" id="">
-            <input type="submit">
+            <input type="email" name="" id="" placeholder="Escriba su correo electronico">
+            <input type="password" name="" id="" placeholder="Escriba su contraseña">
+            <input type="submit" class="entrar">
         </form>
     </main>
+
+    <footer>
+        <div class="quienesSomos">
+            <img src="./logos/logo-footer.svg" alt="">
+            <div>
+                <a href="">Quienes somos</a>
+                <a href="">Politica de privacidad</a>
+                <a href="">Programa de fidelidad</a>
+                <a href="">Nuestras tiendas</a>
+                <a href="">Quiero ser franquisiado</a>
+                <a href="">Anuncie aqui</a>
+            </div>
+        </div>
+        <form action="" class="formulario">
+            <h1>Hable con nosotros</h1>
+            <input type="text" placeholder="nombre">
+            <textarea name="" id="" cols="30" rows="10">Escribe tu mensaje</textarea>
+            <button type="submit">Enviar mensaje</button>
+        </form>
+    </footer>
 </body>
 </html>
