--- a/logIn.html
+++ b/logIn.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/logIn-mobile.css">
+    <link rel="stylesheet" href="./styles/logIn-tablet.css" media="(min-width:768px)">
     <title>Iniciar secion</title>
 </head>
 <body>
