header en la version tablet lista

--- a/logIn.html
+++ b/logIn.html
@@ -11,7 +11,13 @@
 <body>
     <header>
         <img src="./logos/logoAluraGeek.svg" alt="">
-        <img src="./logos/icono-buscador.svg" alt="">
+        <img src="./logos/icono-buscador.svg" alt="" class="icon-buscador">
+        <div class="container__login-tablet container__login-desktop">
+            <div class="container__buscador">
+                <input type="text" placeholder="¿Que deseas buscar?">
+                <button></button>
+            </div>
+        </div>
     </header>
 
     <main>
