logIn en la version desktop lista

--- a/logIn.html
+++ b/logIn.html
@@ -6,11 +6,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/logIn-mobile.css">
     <link rel="stylesheet" href="./styles/logIn-tablet.css" media="(min-width:768px)">
+    <link rel="stylesheet" href="./styles/logIn-desktop.css" media="(min-width:1024px)">
     <title>Iniciar secion</title>
 </head>
 <body>
     <header>
-        <img src="./logos/logoAluraGeek.svg" alt="">
+        <img src="./logos/logoAluraGeek.svg" alt="" class="logo-alura">
         <img src="./logos/icono-buscador.svg" alt="" class="icon-buscador">
         <div class="container__login-tablet container__login-desktop">
             <div class="container__buscador">
