vinculando la pagina de inicio con el log In

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="text" placeholder="¿Que deseas buscar?">
                 <button></button>
             </div>
-            <a href="" class="boton__login">Login</a>
+            <a href="/logIn.html" class="boton__login">Login</a>
         </div>
     </header>
 
