pagina login lista

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container__login-mobile">
             <img src="./logos/logoAluraGeek.svg" alt="logo-Alura-Geek">
-            <a href="" class="boton__login">Login</a>
+            <a href="/logIn.html" class="boton__login">Login</a>
             <img src="./logos/icono-buscador.svg" alt="Buscador">
         </div>
         <div class="container__login-tablet container__login-desktop">
