cards de los productos terminados en la version mobile

--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/productos-mobile.css">
     <title>Productos</title>
 </head>
@@ -17,5 +18,97 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="todosLosProductos">
+            <h1>Todos los productos</h1>
+            <button>Agregar producto</button>
+        </div>
+
+        <section class="seccion__products">
+            <section class="container__productos-starWars">
+                <article class="container__producto">
+                    <img src="./productosImg/starWars1.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">#1111111</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars2.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">#1111111</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars3.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">#1111111</a>
+                </article>
+                <article class="container__producto">
+                    <img src="./productosImg/starWars4.png" alt="">
+                    <p class="name__product">Producto XYZ</p>
+                    <p class="price__product">R$ 60,00</p>
+                    <a href="">#1111111</a>
+                </article>
+            </section>
+
+            <section class="seccion__products">
+                <section class="container__productos-consolas">
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas1.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas2.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas3.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/consolas4.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+            </section>
+
+            <section class="seccion__products">
+                <section class="container__productos-diversos">
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos1.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos2.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos3.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+                    <article class="container__producto">
+                        <img src="./productosImg/diversos4.png" alt="">
+                        <p class="name__product">Producto XYZ</p>
+                        <p class="price__product">R$ 60,00</p>
+                        <a href="">#1111111</a>
+                    </article>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
