productos en la version desktop lista

--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/productos-mobile.css">
     <link rel="stylesheet" href="./styles/productos-tablet.css" media="(min-width:768px)">
+    <link rel="stylesheet" href="./styles/productos-desktop.css" media="(min-width:1024px)">
     <title>Productos</title>
 </head>
 <body>
