seccion de productos linkeada al home

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <section class="seccion__products">
             <div class="title__products">
                 <h1>Star Wars</h1>
-                <div>
+                <a href="./productos.html">
                     <p>Ver todo</p>
                     <img src="./logos/arrow_back.svg" alt="arrow">
-                </div>
+                </a>
             </div>
             <section class="container__productos-starWars">
                 <article class="container__producto">
@@ -73,10 +73,10 @@
             <section class="seccion__products">
                 <div class="title__products">
                     <h1>Consolas</h1>
-                    <div>
+                    <a href="./productos.html">
                         <p>Ver todo</p>
                         <img src="./logos/arrow_back.svg" alt="arrow">
-                    </div>
+                    </a>
                 </div>
                 <section class="container__productos-consolas">
                     <article class="container__producto">
@@ -108,10 +108,10 @@
             <section class="seccion__products">
                 <div class="title__products">
                     <h1>Diversos</h1>
-                    <div>
+                    <a href="./productos.html">
                         <p>Ver todo</p>
                         <img src="./logos/arrow_back.svg" alt="arrow">
-                    </div>
+                    </a>
                 </div>
                 <section class="container__productos-diversos">
                     <article class="container__producto">
