--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -24,5 +24,37 @@
         </div>
     </header>
 
+    <main>
+        <h1>Agregar nuevo producto</h1>
+        <form action="">
+            <input type="url" name="" id="" placeholder="URL de la imagen">
+            <input type="text" name="" id="" placeholder="Categoria">
+            <input type="text" name="" id="" placeholder="Nombre del producto">
+            <input type="number" name="" id="" placeholder="$precio del producto">
+            <input type="text" name="" id="" placeholder="Descripcion del producto">
+            <input type="submit" class="Agregar-prodducto" placeholder="Agregar producto">
+        </form>
+    </main>
+
+    <footer>
+        <div class="quienesSomos">
+            <img src="./logos/logo-footer.svg" alt="">
+            <div>
+                <a href="">Quienes somos</a>
+                <a href="">Politica de privacidad</a>
+                <a href="">Programa de fidelidad</a>
+                <a href="">Nuestras tiendas</a>
+                <a href="">Quiero ser franquisiado</a>
+                <a href="">Anuncie aqui</a>
+            </div>
+        </div>
+        <form action="" class="formulario">
+            <h1>Hable con nosotros</h1>
+            <input type="text" placeholder="nombre">
+            <textarea name="" id="" cols="30" rows="10">Escribe tu mensaje</textarea>
+            <button type="submit">Enviar mensaje</button>
+        </form>
+    </footer>
+
 </body>
 </html>
