pagina estilizada primer demo

--- a/logIn.html
+++ b/logIn.html
@@ -24,8 +24,8 @@
     <main>
         <h1>Iniciar sesion</h1>
         <form action="">
-            <input type="email" name="" id="" placeholder="Escriba su correo electronico">
-            <input type="password" name="" id="" placeholder="Escriba su contraseña">
+            <input type="email" name="" id="" placeholder="Escriba su correo electronico" class="input-logIn">
+            <input type="password" name="" id="" placeholder="Escriba su contraseña"  class="input-logIn">
             <input type="submit" class="entrar">
         </form>
     </main>
