--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,7 @@
     <main>
         <div class="todosLosProductos">
             <h1>Todos los productos</h1>
-            <button>Agregar producto</button>
+            <a href="./nuevoProducto.html">Agregar producto</a>
         </div>
 
         <section class="seccion__products">
