--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -28,16 +28,20 @@
 
     <main class="container__form">
         <h1>Agregar nuevo producto</h1>
-        <form action="" class="container__inputs">
-            <input type="url" name="" id="" placeholder="URL de la imagen" class="inputsP">
-            <input type="text" name="" id="" placeholder="Categoria" class="inputsP">
-            <input type="text" name="" id="" placeholder="Nombre del producto" class="inputsP">
-            <input type="number" name="" id="" placeholder="$precio del producto" class="inputsP">
-            <input type="text" name="" id="" placeholder="Descripcion del producto" class="inputsP">
-            <input type="submit" class="Agregar-prodducto" placeholder="Agregar producto">
-        </form>
-    </main>
+        <section class="container__inputs">
+            <input type="url" name="" id="urlImagen" placeholder="URL de la imagen" class="inputsP">
+            <input type="text" name="" id="categoria" placeholder="Categoria" class="inputsP">
+            <input type="text" name="" id="nombre" placeholder="Nombre del producto" class="inputsP">
+            <input type="number" name="" id="precio" placeholder="$precio del producto" class="inputsP">
+            <input type="text" name="" id="descripcion" placeholder="Descripcion del producto" class="inputsP">
+            <button type="button" class="Agregar-prodducto" id="agregar__producto">Agreagar al carrito</button>
+        </section>
 
+        <section>
+           
+        </section>
+    </main>
+   
     <footer>
         <div class="quienesSomos">
             <img src="./logos/logo-footer.svg" alt="">
@@ -57,6 +61,6 @@
             <button type="submit">Enviar mensaje</button>
         </form>
     </footer>
-
+    <script src="./main/agregarAlcarrito.js"></script>
 </body>
 </html>
