--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -13,8 +13,7 @@
     <header>
         <div class="container__login-mobile">
             <img src="./logos/logoAluraGeek.svg" alt="logo-Alura-Geek" class="logo-alura">
-            <a href="/logIn.html" class="boton__login">Menu administrador</a>
-            <img src="./logos/icono-buscador.svg" alt="Buscador">
+            <a href="/logIn.html" class="boton__login"></a>
         </div>
         <div class="container__login-tablet container__login-desktop"> 
             <img src="./logos/logoAluraGeek.svg" alt="">
@@ -22,7 +21,7 @@
                 <input type="text" placeholder="¿Que deseas buscar?">
                 <button></button>
             </div>
-            <a href="/logIn.html" class="boton__login">Menu administrador</a>
+            <a href="/logIn.html" class="boton__login"></a>
         </div>
     </header>
 
@@ -37,8 +36,10 @@
             <button type="button" class="Agregar-prodducto" id="agregar__producto">Agreagar al carrito</button>
         </section>
 
-        <section>
-           
+        <section class="container__carrito">
+           <!--ul id="carrito"></!--ul-->
+           <ul class="container__producto" id="carrito">
+           </ul>
         </section>
     </main>
    
