--- a/logIn.html
+++ b/logIn.html
@@ -24,10 +24,26 @@
     <main>
         <h1>Iniciar sesion</h1>
         <form action="">
-            <input type="text" placeholder="Nombre" class="input-logIn" required>
-            <input type="date" placeholder="Fecha de nacimiento" class="input-logIn" id="birth" required>
-            <input type="email" name="email" id="email" placeholder="Escriba su correo electronico" class="input-logIn" required data-tipo="email">
-            <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales.">
+            <div class="input-container">
+                <input type="text" name="name" placeholder="Nombre" class="input-logIn" id="name" required>
+                <label for="name" class="input-label">Nombre</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div  class="input-container">
+                <input type="date" name="nacimiento" placeholder="Fecha de nacimiento" class="input-logIn" id="birth" required data-tipo="nacimiento">
+                <label for="birth" class="input-label">Fecha de nacimiento</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div  class="input-container">
+                <input type="email" name="email" id="email" placeholder="Escriba su correo electronico" class="input-logIn" required data-tipo="email">
+                <label for="email" class="input-label">email</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
+            <div  class="input-container">
+                <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="contrasena">
+                <label for="contrasena">contraseña</label>
+                <span class="input-message-error">Este campo no es valido</span>
+            </div>
             <input type="submit" class="entrar">
         </form>
     </main>
@@ -52,6 +68,6 @@
         </form>
     </footer>
 
-    <script src="./main/validaciones.js"></script>
+    <script src="./main/app.js" type="module"></script>
 </body>
 </html>
