agregue el archivo html al action del form del archivo de logIn

--- a/logIn.html
+++ b/logIn.html
@@ -23,7 +23,7 @@
 
     <main>
         <h1>Iniciar sesion</h1>
-        <form action="">
+        <form action="./productos.html">
             <div class="input-container">
                 <input type="text" name="name" placeholder="Nombre" class="input-logIn" id="name" required>
                 <label for="name" class="input-label">Nombre</label>
