mejore los estilos de los inputs

--- a/logIn.html
+++ b/logIn.html
@@ -41,10 +41,12 @@
             </div>
             <div  class="input-container">
                 <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="contrasena">
-                <label for="contrasena">contraseña</label>
+                <label for="contrasena" class="input-label">contraseña</label>
                 <span class="input-message-error">Este campo no es valido</span>
             </div>
-            <input type="submit" class="entrar">
+            <div>
+               <button class="entrar">Registrarse</button>
+            </div>
         </form>
     </main>
 
