seccion de registro terminada con la validacion de datos

--- a/logIn.html
+++ b/logIn.html
@@ -40,8 +40,8 @@
                 <span class="input-message-error">Este campo no es valido</span>
             </div>
             <div  class="input-container">
-                <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="contrasena" data-tipo="contrasena">
-                <label for="contrasena" class="input-label">contraseña</label>
+                <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="password" data-tipo="password">
+                <label for="password" class="input-label">contraseña</label>
                 <span class="input-message-error">Este campo no es valido</span>
             </div>
             <div>
