correcion de los input eliminamos el plachegolder de los inputs

--- a/logIn.html
+++ b/logIn.html
@@ -25,22 +25,22 @@
         <h1>Iniciar sesion</h1>
         <form action="./productos.html">
             <div class="input-container">
-                <input type="text" name="name" placeholder="Nombre" class="input-logIn" id="name" required data-tipo="nombre">
+                <input type="text" name="name"  class="input-logIn" id="name" required data-tipo="nombre">
                 <label for="name" class="input-label">Nombre</label>
                 <span class="input-message-error"></span>
             </div>
             <div  class="input-container">
-                <input type="date" name="nacimiento" placeholder="Fecha de nacimiento" class="input-logIn" id="birth" required data-tipo="nacimiento">
+                <input type="date" name="nacimiento" class="input-logIn" id="birth" required data-tipo="nacimiento">
                 <label for="birth" class="input-label">Fecha de nacimiento</label>
                 <span class="input-message-error"></span>
             </div>
             <div  class="input-container">
-                <input type="email" name="email" id="email" placeholder="Escriba su correo electronico" class="input-logIn" required data-tipo="email">
+                <input type="email" name="email" id="email" class="input-logIn" required data-tipo="email">
                 <label for="email" class="input-label">email</label>
                 <span class="input-message-error"></span>
             </div>
             <div  class="input-container">
-                <input type="password" name="" placeholder="Escriba su contraseña"  class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="password" data-tipo="password">
+                <input type="password" name="" class="input-logIn" required pattern="^(?=.*[a-z])(?=.*[A-Z])[a-zA-Z0-9]{6,12}$" title="Al menos 6 caracteres, maximo 12 caracteres debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales." id="password" data-tipo="password">
                 <label for="password" class="input-label">contraseña</label>
                 <span class="input-message-error"></span>
             </div>
