correccion del link de menu de administrador

--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container__login-mobile">
             <img src="./logos/logoAluraGeek.svg" alt="logo-Alura-Geek" class="logo-alura">
-            <a href="/logIn.html" class="boton__login">Menu administrador</a>
+            <a href="./logIn.html" class="boton__login">Menu administrador</a>
             <img src="./logos/icono-buscador.svg" alt="Buscador">
         </div>
         <div class="container__login-tablet container__login-desktop"> 
@@ -22,7 +22,7 @@
                 <input type="text" placeholder="¿Que deseas buscar?">
                 <button></button>
             </div>
-            <a href="/logIn.html" class="boton__login">Menu administrador</a>
+            <a href="./logIn.html" class="boton__login">Menu administrador</a>
         </div>
     </header>
 
