link de los productos agregados a la urlImagen

--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -13,16 +13,11 @@
     <header>
         <div class="container__login-mobile">
             <img src="./logos/logoAluraGeek.svg" alt="logo-Alura-Geek" class="logo-alura">
-            <a href="./logIn.html" class="boton__login">Menu administrador</a>
-            <img src="./logos/icono-buscador.svg" alt="Buscador">
+            <a href="./logIn.html" class="boton__login"></a>
         </div>
         <div class="container__login-tablet container__login-desktop"> 
             <img src="./logos/logoAluraGeek.svg" alt="">
-            <div class="container__buscador">
-                <input type="text" placeholder="¿Que deseas buscar?">
-                <button></button>
-            </div>
-            <a href="/logIn.html" class="boton__login">Menu administrador</a>
+            <a href="/logIn.html" class="boton__login"></a>
         </div>
 
         <section class="container__carrito">
