funcion toggle para aparecer y desaparecer la seccion del carrito

--- a/nuevoProducto.html
+++ b/nuevoProducto.html
@@ -13,14 +13,14 @@
     <header>
         <div class="container__login-mobile">
             <img src="./logos/logoAluraGeek.svg" alt="logo-Alura-Geek" class="logo-alura">
-            <a href="./logIn.html" class="boton__login"></a>
+            <button class="boton__login" id="btn__carrito"></button>
         </div>
-        <div class="container__login-tablet container__login-desktop"> 
+        <!--div class="container__login-tablet container__login-desktop"> 
             <img src="./logos/logoAluraGeek.svg" alt="">
-            <a href="/logIn.html" class="boton__login"></a>
-        </div>
+            <button class="boton__login" id="btn__carrito"></button>
+        </!--div-->
 
-        <section class="container__carrito">
+        <section class="container__carrito inactive">
             <!--ul id="carrito"></!--ul-->
             <ul class="container__producto" id="carrito">
                 
