--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="banner__container-div">
             <h1>Febrero promocional</h1>
             <p>Productos seleccionados con 33% de descuento</p>
-            <a href="" class="boton__baner">Ver consolas</a>
+            <a href="#consolas" class="boton__baner">Ver consolas</a>
         </div>
     </section>
 
@@ -70,7 +70,7 @@
                 </article>
             </section>
 
-            <section class="seccion__products">
+            <section class="seccion__products" id="consolas">
                 <div class="title__products">
                     <h1>Consolas</h1>
                     <a href="./productos.html">
