correcion en el estilo del boton enviar mensje

--- a/productos.html
+++ b/productos.html
@@ -139,7 +139,7 @@
                 <span class="error"></span>
             </div>
             <div class="containerBTNEnviar">
-                <button type="button" id="btnMensaje"></button>
+                <button type="button" id="btnMensaje">Enviar mensaje</button>
             </div>
         </form>
     </footer>
